tests/error/new_empty_array.gw
// [contains] can't use empty
new Object[];
